--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     implementation('com.frosquivel:magicalcamera:6.0.0@aar') {
         transitive = false;
     }
+    implementation 'com.android.support:cardview-v7:29.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
