--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Datos2"></activity>
+        <activity android:name=".Bienvenido"></activity>
+        <activity android:name=".Datos2" />
         <activity android:name=".MainActivity" />
         <activity android:name=".Login" />
         <activity android:name=".Datos">
